feat: accept coordinate inputs for astro charts
